--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,3 @@
 venv/*
-EcoWeb/Apps/Usuarios/ecoweb-fc73c-firebase-adminsdk-20hmv-feea5a9108.json
+# EcoWeb/Apps/Usuarios/ecoweb-fc73c-firebase-adminsdk-20hmv-feea5a9108.json
+migrations/*
