modificado gitignore para adaptar secrets

--- a/.github/workflows/django.yml
+++ b/.github/workflows/django.yml
@@ -30,7 +30,7 @@ jobs:
         pip install -r requeriments.txt
 
     - name: Create secret file
-      run: echo "${{ secrets.ADMIN_FIREBASE }}" > EcoWeb/Apps/Usuarios/ecoweb-fc73c-firebase-adminsdk-20hmv-feea5a9108.json
+      run: echo "${{ secrets.ADMIN_FIREBASE }}"
         
     - name: Run Tests
       run: |
