adaptando yaml de GitHubActions v2

--- a/.github/workflows/django.yml
+++ b/.github/workflows/django.yml
@@ -34,6 +34,10 @@ jobs:
         ADMIN_FIREBASE: ${{ secrets.ADMIN_FIREBASE }}
       run: | 
         echo "$ADMIN_FIREBASE" > EcoWEB/Apps/Usuarios/ecoweb-fc73c-firebase-adminsdk-20hmv-feea5a9108.json
+    
+    - name: Print directory contents
+      run: ls -R EcoWEB
+      
   
         
     - name: Run Tests
