--- a/.github/workflows/django.yml
+++ b/.github/workflows/django.yml
@@ -34,6 +34,10 @@ jobs:
           ADMIN_FIREBASE: ${{ secrets.ADMIN_FIREBASE }}
       run: |
         echo "$ADMIN_FIREBASE" > EcoWEB/Apps/Usuarios/ecoweb-fc73c-firebase-adminsdk-20hmv-feea5a9108.json
+
+    - name: Check if source file exists
+      run: test -f EcoWEB/Apps/Usuarios/ecoweb-fc73c-firebase-adminsdk-20hmv-feea5a9108.json && echo "Source file exists" || echo "Source file does not exist"
+      
       
     - name: Create symbolic link to Firebase Admin SDK JSON file
       run: ln -s EcoWEB/Apps/Usuarios/ecoweb-fc73c-firebase-adminsdk-20hmv-feea5a9108.json Apps/Usuarios/ecoweb-fc73c-firebase-adminsdk-20hmv-feea5a9108.json
