--- a/.github/workflows/django.yml
+++ b/.github/workflows/django.yml
@@ -34,6 +34,9 @@ jobs:
           ADMIN_FIREBASE: ${{ secrets.ADMIN_FIREBASE }}
       run: |
         echo "$ADMIN_FIREBASE" > EcoWEB/Apps/Usuarios/ecoweb-fc73c-firebase-adminsdk-20hmv-feea5a9108.json
+
+    - name: Copy Firebase Admin SDK JSON file to desired location
+      run: cp EcoWEB/Apps/Usuarios/ecoweb-fc73c-firebase-adminsdk-20hmv-feea5a9108.json Apps/Usuarios/ecoweb-fc73c-firebase-adminsdk-20hmv-feea5a9108.json
         
     - name: Run Tests
       run: |
