--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,4 @@
 venv/*
 EcoWEB/Apps/Usuarios/ecoweb-fc73c-firebase-adminsdk-20hmv-feea5a9108.json
-EcoWEB/Apps/Usuarios/migrations/*
-EcoWEB/Apps/Usuarios/__pycache__/*
+EcoWEB/Apps/Usuarios/migrations
+EcoWEB/Apps/Usuarios/__pycache__
