--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,4 @@ venv/*
 EcoWEB/Apps/Usuarios/ecoweb-fc73c-firebase-adminsdk-20hmv-feea5a9108.json
 EcoWEB/Apps/Usuarios/migrations
 EcoWEB/Apps/Usuarios/__pycache__
+EcoWEB/__pycache__
