--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,4 @@ EcoWEB/Apps/Usuarios/ecoweb-fc73c-firebase-adminsdk-20hmv-feea5a9108.json
 EcoWEB/Apps/Usuarios/migrations
 EcoWEB/Apps/Usuarios/__pycache__
 EcoWEB/__pycache__
+EcoWEB/EcoWEB/__pycache__
