--- a/.github/workflows/django.yml
+++ b/.github/workflows/django.yml
@@ -27,7 +27,10 @@ jobs:
     - name: Install Dependencies
       run: |
         python -m pip install --upgrade pip
-        pip install -r requeriments.txt
+        pip freeze > requirements.txt
+        pip uninstall -r requirements.txt -y
+        pip install -r requirements.txt
+
 
     - name: Crear la carpeta para sortear incongruencias
       run: mkdir -p Apps/Usuarios
