--- a/.gitignore
+++ b/.gitignore
@@ -9,3 +9,4 @@ EcoWEB/Apps/Compras/__pycache__
 EcoWEB/__pycache__
 EcoWEB/EcoWEB/__pycache__
 EcoWEB/Apps/Productos/templatetags/__pycache__
+EcoWEB/settings_server.py
