--- a/.github/workflows/django.yml
+++ b/.github/workflows/django.yml
@@ -27,7 +27,7 @@ jobs:
     - name: Install Dependencies
       run: |
         python -m pip install --upgrade pip
-        pip install -r /EcoWEB/requirements.txt
+        pip install -r EcoWEB/requirements.txt
 
 
     - name: Crear la carpeta para sortear incongruencias
